update Experiment 2: IST Stroke trial

--- a/presentation_report/thesis/chapter01.tex
+++ b/presentation_report/thesis/chapter01.tex
@@ -26,7 +26,7 @@ Another central limitation of RCTs is that in many scenarios they can not be con
 Therefore, much of the research aims to make causal inference from observational data in a non-experimental or quasi-experimental design. In an observational setting, there are usually confounding variables that make it challenging to measure the effect between exposure and outcome. Methods for causal infreence on observational data for example aims to correctly adjust or control for confounders. \citet{sick2025} proposed the framework of TRAM-DAGs to estimate the causal relationships in an observational setting and make subsequent queries. The aim of this thesis is to further analyze this method and apply it in a real-world scenario.
 
 
-\textbf{Background on causality}
+\section{Background on causality}
 
 Causal relationships can be represented by a directed acyclic graph (DAG) as, for example, shown in Figure \ref{fig:pearl_levels}(a). The variables, or nodes, are connected by directed edges which indicate the path of causal dependence.
 
