--- a/presentation_report/thesis/chapter03.tex
+++ b/presentation_report/thesis/chapter03.tex
@@ -53,6 +53,37 @@ And here we can show that our TRAM-DAG specified by a complex shift of T and X1 
 
 \clearpage
 
+
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.9\textwidth]{img/results_IST/glm_tlearner_density_ITE_ATE.png}
+\caption{Results for the International Stroke Trial (IST) with the T-learner logistic regression. Left: density of the predicted ITE in the training and test set; Right: observed ATE in terms of risk difference per estimated ITE subgroup.}
+\label{fig:IST_density_ITE_ATE_glm_tlearner}
+\end{figure}
+
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.9\textwidth]{img/results_IST/IST_tuned_rf_tlearner_density_ITE_ATE.png}
+\caption{Results for the International Stroke Trial (IST) with the T-learner tuned random forest. Left: density of the predicted ITE in the training and test set; Right: observed ATE in terms of risk difference per estimated ITE subgroup.}
+\label{fig:IST_density_ITE_ATE_tuned_rf}
+\end{figure}
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.9\textwidth]{img/results_IST/IST_TRAM_DAG_slearner_density_ITE_ATE.png}
+\caption{Results for the International Stroke Trial (IST) with the S-learner TRAM-DAG. Left: density of the predicted ITE in the training and test set; Right: observed ATE in terms of risk difference per estimated ITE subgroup.}
+\label{fig:IST_density_ITE_ATE_TRAM_DAG}
+\end{figure}
+
+
+
+\clearpage
+
  
 \section{Experiment 3: ITE model robustness under RCT conditions (simulation study)} \label{sec:results_experiment3}
 
