--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -428,3 +428,31 @@ series = {ICML'17}
       primaryClass={stat.ME},
       url={https://arxiv.org/abs/2208.08544}, 
 }
+
+
+@article{IST1997,
+title = {The International Stroke Trial (IST): a randomised trial of aspirin, subcutaneous heparin, both, or neither among 19,435 patients with acute ischaemic stroke},
+author = {{International Stroke Trial Collaborative Group}},
+journal = {The Lancet},
+volume = {349},
+number = {9065},
+pages = {1569-1581},
+year = {1997},
+issn = {0140-6736},
+doi = {https://doi.org/10.1016/S0140-6736(97)04011-7},
+url = {https://doi.org/10.1016/S0140-6736(97)04011-7}
+}
+
+@article{sandercock2011,
+  author    = {Sandercock, Peter A.G. and Niewada, Maciej and Cz{\l}onkowska, Anna and the International Stroke Trial Collaborative Group},
+  title     = {The International Stroke Trial database},
+  journal   = {Trials},
+  year      = {2011},
+  volume    = {12},
+  number    = {1},
+  pages     = {101},
+  doi       = {10.1186/1745-6215-12-101},
+  url       = {https://doi.org/10.1186/1745-6215-12-101},
+  issn      = {1745-6215}
+}
+
